rename items and prices

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Carattere&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>JA COLLECTIN</title>
 </head>
 
@@ -46,19 +46,19 @@
         <div id="slider-container" class="slider">
 
             <div class="slide">
-                <img src="/images/men10.jpg" alt="">
+                <img src="images/men10.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/men2.jpeg" alt="">
+                <img src="images/men2.jpeg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/shoe3.jpg" alt="">
+                <img src="images/shoe3.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/men8.jpg" alt="">
+                <img src="images/men8.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/men10.jpg" alt="">
+                <img src="images/men10.jpg" alt="">
             </div>
         </div>
         <!-- <div class="overlay"></div> -->
@@ -69,19 +69,19 @@
         <div id="slider-container" class="slider">
 
             <div class="slide">
-                <img src="/images/women1.jpeg" alt="">
+                <img src="images/women1.jpeg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/women2.jpeg" alt="">
+                <img src="images/women2.jpeg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/women4.jpeg" alt="">
+                <img src="images/women4.jpeg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/women9.jpg" alt="">
+                <img src="images/women9.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/women10.jpeg" alt="">
+                <img src="images/women10.jpeg" alt="">
             </div>
 
         </div>
@@ -94,19 +94,19 @@
         <div id="slider-container" class="slider">
 
             <div class="slide">
-                <img src="/images/child1.jpeg" alt="">
+                <img src="images/child1.jpeg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/child2.jpg" alt="">
+                <img src="images/child2.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/child3.jpg" alt="">
+                <img src="images/child3.jpg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/child8.jpeg" alt="">
+                <img src="images/child8.jpeg" alt="">
             </div>
             <div class="slide">
-                <img src="/images/child10.jpg" alt="">
+                <img src="images/child10.jpg" alt="">
             </div>
         </div>
         <a href="children.html" class="button">See More</a>
