--- a/women.html
+++ b/women.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/children.css" type="text/css">
+  <link rel="stylesheet" href="css/children.css" type="text/css">
   <style>
 
   </style>
@@ -31,9 +31,43 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="/images/pantsuit.jpg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/pantsuit.jpg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
+            <h2 class="item">Red Pant-Suit</h2>
+            <p class="title">Ksh 1,200</p>
+
+            <p><button class="button">Add To Cart</button></p>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="images/women2.jpeg" alt="Jane" style="width:100%; height:400px">
+          <div class="container">
+            <h2 class="item">FUll Neck Dress</h2>
+            <p class="title">Ksh 1,500</p>
+
+            <p><button class="button">Add To Cart</button></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="column">
+        <div class="card">
+          <img src="images/women3.jpg" alt="Jane" style="width:100%; height:400px">
+          <div class="container">
+            <h2 class="item">Brown Short Dress</h2>
+            <p class="title">Ksh 1,000</p>
+
+            <p><button class="button">Add To Cart</button></p>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="card">
+          <img src="images/women4.jpeg" alt="Jane" style="width:100%; height:400px">
+          <div class="container">
+            <h2 class="item">Three Quater T-Shirt</h2>
             <p class="title">Ksh 200</p>
 
             <p><button class="button">Add To Cart</button></p>
@@ -42,22 +76,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women2.jpeg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women5.jpg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
-
-            <p><button class="button">Add To Cart</button></p>
-          </div>
-        </div>
-      </div>
-
-      <div class="column">
-        <div class="card">
-          <img src="/images/women3.jpg" alt="Jane" style="width:100%; height:400px">
-          <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Red Striped Full T-Shirt</h2>
+            <p class="title">Ksh 900</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -65,10 +87,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women4.jpeg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women6.jpg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">WHite Party Dress</h2>
+            <p class="title">Ksh 2,000</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -76,10 +98,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women5.jpg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women7.jpg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Net Dresss</h2>
+            <p class="title">Ksh 2,500</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -87,10 +109,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women6.jpg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women8.png" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Black Leather Shoes</h2>
+            <p class="title">Ksh 1,300</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -98,10 +120,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women7.jpg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women9.jpg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Silver Leather Shoes</h2>
+            <p class="title">Ksh 1,500</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -109,10 +131,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women8.png" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women10.jpeg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Flat Silver Shoes</h2>
+            <p class="title">Ksh 1,100</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -120,10 +142,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women9.jpg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women11.jpg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Open High Hilled Shoes</h2>
+            <p class="title">Ksh 1,800</p>
 
             <p><button class="button">Add To Cart</button></p>
           </div>
@@ -131,32 +153,10 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="/images/women10.jpeg" alt="Jane" style="width:100%; height:400px">
+          <img src="images/women12.jpeg" alt="Jane" style="width:100%; height:400px">
           <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
-
-            <p><button class="button">Add To Cart</button></p>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="card">
-          <img src="/images/women11.jpg" alt="Jane" style="width:100%; height:400px">
-          <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
-
-            <p><button class="button">Add To Cart</button></p>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="card">
-          <img src="/images/women12.jpeg" alt="Jane" style="width:100%; height:400px">
-          <div class="container">
-            <h2>Sneakers</h2>
-            <p class="title">Ksh 200</p>
+            <h2 class="item">Closed High Hilled Shoes</h2>
+            <p class="title">Ksh 2,000</p>
             <p><button class="button">Add To Cart</button></p>
           </div>
         </div>
