change path to images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carattere&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <title>JA COLLECTIN</title>
+    <title>JA COLLECTION</title>
 </head>
 
 <body>
@@ -173,6 +173,6 @@
     </div>
     </div>
 
-</body>
+</body>o
 
 </html>
